--- a/hyprland/hyprpaper.conf
+++ b/hyprland/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ../wallpapers/desk.jpg
-wallpaper = ,../wallpapers/desk.jpg
+preload = /home/iershov/.config/hypr/wallpaper.jpg
+wallpaper = ,/home/iershov/.config/hypr/wallpaper.jpg
