--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -157,6 +157,9 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind =. $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
+# Lock screen
+bind = $mainMod, L, exec, hyprlock
+
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
