--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -60,10 +60,10 @@ decoration {
         passes = 1
     }
 
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+#    drop_shadow = yes
+#    shadow_range = 4
+#    shadow_render_power = 3
+#    col.shadow = rgba(1a1a1aee)
 }
 
 animations {
@@ -87,15 +87,15 @@ dwindle {
     preserve_split = yes # you probably want this
 }
 
-master {
+#master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
-}
+#    new_is_master = true
+#}
 
-gestures {
+#gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = off
-}
+#    workspace_swipe = off
+#}
 
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
@@ -105,7 +105,7 @@ misc {
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device:epic-mouse-v1 {
-    sensitivity = -0.5
+#    sensitivity = -0.5
 }
 
 # Example windowrule v1
@@ -113,7 +113,7 @@ device:epic-mouse-v1 {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
+#windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
