--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -6,7 +6,7 @@ exec-once = waybar
 exec-once = hyprpaper
 
 # Source a file (multi-file configs)
-source = ~/.config/hyprland/myColors.conf
+# source = ~/.config/hyprland/myColors.conf
 
 # Set programs that you use
 $terminal = kitty
@@ -87,10 +87,10 @@ dwindle {
     preserve_split = yes # you probably want this
 }
 
-master {
+#master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
-}
+#    new_is_master = true
+#}
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
@@ -104,9 +104,9 @@ misc {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-device:epic-mouse-v1 {
-    sensitivity = -0.5
-}
+#device:epic-mouse-v1 {
+#    sensitivity = -0.5
+#}
 
 # Example windowrule v1
 windowrule = float, ^(kitty)$
