--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -154,7 +154,7 @@ bind = $mainMod SHIFT, 5, movetoworkspace, 5
 bind = $mainMod SHIFT, 6, movetoworkspace, 6
 bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind =. $mainMod SHIFT, 9, movetoworkspace, 9
+bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Lock screen
