--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -109,11 +109,11 @@ misc {
 #}
 
 # Example windowrule v1
-windowrule = float, ^(kitty)$
+# windowrule = float, ^(kitty)$
 # Example windowrule v2
-windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = nomaximizerequest, class:.*
+#windowrulev2 = nomaximizerequest, class:.*
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
