--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -92,10 +92,10 @@ dwindle {
 #    new_is_master = true
 #}
 
-gestures {
+#gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = off
-}
+#    workspace_swipe = off
+#}
 
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
