--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -9,7 +9,7 @@ exec-once = hyprpaper
 # source = ~/.config/hyprland/myColors.conf
 
 # Set programs that you use
-$terminal = kitty
+$terminal = alacritty
 $fileManager = dolphin
 $menu = wofi --show drun
 
