--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -171,3 +171,17 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Mechabar script binds
+$scr = ~/.config/waybar/scripts
+bind = $mainMod, B, exec, $terminal -e $scr/bluetooth.sh
+bind = $mainMod, N, exec, $terminal -e $scr/network.sh
+bind = $mainMod, O, exec, $terminal -e $scr/power-menu.sh
+bind = $mainMod, U, exec, $terminal -e $scr/system-update.sh
+
+bindl  = , XF86AudioMicMute,      exec, $scr/volume.sh input mute
+bindl  = , XF86AudioMute,         exec, $scr/volume.sh output mute
+bindel = , XF86AudioLowerVolume,  exec, $scr/volume.sh output lower
+bindel = , XF86AudioRaiseVolume,  exec, $scr/volume.sh output raise
+bindel = , XF86MonBrightnessDown, exec, $scr/backlight.sh down
+bindel = , XF86MonBrightnessUp,   exec, $scr/backlight.sh up
