--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -160,6 +160,12 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 # Lock screen
 bind = $mainMod, L, exec, hyprlock
 
+# Screen shot
+bind = , Print, exec, hyprshot -m output
+bind = $mainMod, Print, exec, hyprshot -m region
+bind = $mainMod SHIFT, Print, exec, hyprshot -m window
+
+
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
