--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -4,6 +4,20 @@ $mainMod = SUPER
 # Execute your favorite apps at launch
 exec-once = waybar
 exec-once = hyprpaper
+exec-once = systemctl --user import-environment DISPLAY WAYLAND_DISPLAY HYPRLAND_INSTANCE_SIGNATURE
+
+########################################################################################
+# MONITOR SETTINGS
+# See https://wiki.hyprland.org/Configuring/Monitors/
+#
+# NOTE: Replace DP-2 and DP-4 with your actual monitor names.
+# You can find them by running `hyprctl monitors` in your terminal.
+# Also, adjust the resolution (e.g., 1920x1080) to match your screens.
+#
+# vrr = 1 enables Variable Refresh Rate (G-SYNC/FreeSync).
+########################################################################################
+monitor=DP-2,3840x2160@180,0x0,1,vrr,1
+monitor=DP-4,1920x1080@144,auto,1,vrr,1
 
 # Source a file (multi-file configs)
 # source = ~/.config/hyprland/myColors.conf
@@ -100,6 +114,7 @@ dwindle {
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = -1 # Set to 0 to disable the anime mascot wallpapers
+    vfr = true # Potentially smoother frame pacing in games
 }
 
 # Example per-device config
